--- a/restore_example/setup_env.in
+++ b/restore_example/setup_env.in
@@ -11,6 +11,8 @@ MY_INSTANCE=${MY_INSTANCE:?}
 # Prefix for bucket names - again, feel free to change it
 MY_BUCKET_PREFIX=${MY_BUCKET_PREFIX:?}
 
+# Conda base's python version: should be '2' or '3'; default is '3'
+MY_GALAXY_TOOL_DEPS_CONDA_BASE_PYTHON_VERSION=${MY_GALAXY_TOOL_DEPS_CONDA_BASE_PYTHON_VERSION:-3}
 # Path on docker host to directory that will be mounted as '/export' in container
 MY_GALAXY_EXPORT=${MY_GALAXY_EXPORT:?}
 # Path on docker host to directory whose subdirectory 'main' will be mounted as '/var/lib/postgresql/data' in container
@@ -115,3 +117,5 @@ PGDATA_DIR=${PGDATA_PARENT:?}/${PGDATA_SUBDIR:?}
 ${EXTRA_GALAXY_ENVARS:?}
 
 " > dot_env_for_compose
+
+sed -e "s@/path/to/usernetes@${MY_USERNETES:?}@" docker.service.example > docker.service
