--- a/restore_example/globals.example
+++ b/restore_example/globals.example
@@ -15,6 +15,7 @@ while [ -h "$SOURCE" ]; do # resolve $SOURCE until the file is no longer a symli
   [[ $SOURCE != /* ]] && SOURCE="$DIR/$SOURCE" # if $SOURCE was a relative symlink, we need to resolve it relative to the path where the symlink file was located
 done
 DIR="$( cd -P "$( dirname "$SOURCE" )" >/dev/null 2>&1 && pwd )"
+echo "sourcing $SOURCE"
 
 # Set environment variable to absolute path to this file
 MY_ENV_FOR_TLDR="$SOURCE"
@@ -129,10 +130,6 @@ CONDOR_HOST=${CONDOR_HOST:-galaxy-htcondor}
 "
 ######### EXTRA_GALAXY_ENVARS - end ##############
 
-
-# show results
-set | grep '^MY_'
-
 # Set up ${DIR_FOR_TLDR}/dot_env_for_compose here:
 # For examples of the GALAXY_* variables, see the '.env_*' files at
 #   https://github.com/bgruening/docker-galaxy-stable/tree/master/compose
@@ -150,4 +147,4 @@ ${EXTRA_GALAXY_ENVARS}
 
 " > ${DIR_FOR_TLDR}/dot_env_for_compose
 
-cat ${DIR_FOR_TLDR}/dot_env_for_compose
+#cat ${DIR_FOR_TLDR}/dot_env_for_compose
