--- a/restore_example/setup_env.in
+++ b/restore_example/setup_env.in
@@ -3,8 +3,8 @@
 #   This is sourced by setup_env.example to set up environment variable files for the restoration example.
 
 echo '
-TLDR_RUN_MODE=${TLDR_RUN_MODE:-'"${TLDR_RUN_MODE:?}}
-# produced from ${MY_ENV_FOR_TLDR:?}
+DEMO_RUN_MODE=${DEMO_RUN_MODE:-'"${DEMO_RUN_MODE:?}}
+# produced from ${MY_ENV_FOR_DEMO:?}
 
 # Name you will use for your Galaxy instance
 #  Currently only used by 'screen' and in this file, but you use it as you want
@@ -35,7 +35,7 @@ MY_DATASET_BUCKET=${MY_DATASET_BUCKET:?}
 # Which docker-compose file to use, probably this is fine
 MY_COMPOSE_FILE=${MY_COMPOSE_FILE:?}
 
-" > env-for-TLDR
+" > env-for-DEMO
 #did removed line below from two lines above (and commented out)
 #${EXTRA_GALAXY_ENVARS}
 
