--- a/restore_example/globals.example
+++ b/restore_example/globals.example
@@ -73,14 +73,14 @@ MY_GALAXY_TOOL_DEPS_CONDA_BASE_PYTHON_VERSION=3
 # Fully nonsymbolic path on docker host to directory that will be
 #   mounted as '/export' in container
 #   You MUST change this.
-MY_GALAXY_EXPORT=${MY_GALAXY_EXPORT:-`readlink -f /path/on/host/to/export`}
+MY_GALAXY_EXPORT=${MY_GALAXY_EXPORT:-`readlink -f ${PATH_TO_EXPORT:}`}
 
 # Path on docker host to directory whose subdirectory 'main' will be mounted as 
 #   '/var/lib/postgresql/data' in container
 # Set the root for the PostgreSQL database files here by supplying the path on docker
 #   host to directory whose subdirectory 'main' will be mounted as 
 #   '/var/lib/postgresql/data' in container
-MY_GALAXY_POSTGRES=${MY_GALAXY_POSTGRES:-`readlink -f /path/on/host/to/postgres`}
+MY_GALAXY_POSTGRES=${MY_GALAXY_POSTGRES:-`readlink -f ${PATH_TO_POSTGRES:}`}
 # Postgres password - If the postgres listener is not exposed outside docker
 #    containers, there should be little risk in exposing the password here.
 POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-quindicissimipillars}
@@ -125,6 +125,7 @@ CONTAINERS_TO_RUN='galaxy-postgres galaxy-slurm galaxy-web galaxy-proftpd rabbit
 # Extra exported environment variables to be set in the galaxy-web container
 #   For further info, see https://github.com/bgruening/docker-galaxy-stable/#galaxys-config-settings--toc
 EXTRA_GALAXY_ENVARS="
+### First line of EXTRA_GALAXY_ENVARS defined in the globals file ###
 GALAXY_PORT=${GALAXY_PORT}
 # postgres password - If the postgres listener is not exposed outside docker
 #    containers, there should be little risk in exposing the password here.
@@ -162,6 +163,7 @@ GALAXY_CONFIG_CLEANUP_JOB=${GALAXY_CONFIG_CLEANUP_JOB:-onsuccess}
 
 ENABLE_CONDOR=${ENABLE_CONDOR:-false}
 CONDOR_HOST=${CONDOR_HOST:-galaxy-htcondor}
+### Last line of EXTRA_GALAXY_ENVARS defined in the globals file ###
 "
 ######### EXTRA_GALAXY_ENVARS - end ##############
 
